# quote-replacer

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: android-build.yml  build-apk.yml  release.yml
src/: lib.rs  main.rs
