[package]
name = "quote_replacer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
enigo = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading"
] }
